# CaCOM-HeartWISE

./: .gitignore  README.md  analyze_dataset.ipynb  eda.py  eda_signal_analysis.py  feature_dataset.csv  main.py  make_patient_splits.py  patient_splits.csv  pyproject.toml
data/processed/: cnn_patient_dataframe.csv  cnn_patient_dataframe.pkl  feature_dataset.csv  patient_splits_grf.csv
features/: build_dataset.py  extractor.py  heartbeat_features.py  loader.py  meatdata_features.py  mfcc_features.py  preprocessing.py  time_features.py
granger_RF/: README.md  config.py  interpret.py  main.py  requirements.txt
granger_RF/outputsGRF/: acoustic_patient_features.csv  best_random_forest.joblib  final_test_predictions.csv  granger_patient_features.csv  interpretable_results.txt  labels.csv  model_summary.txt  patient_results_interpretable.csv  search_results.csv  selected_features.csv  threshold_search.csv
granger_RF/outputsGRF/frame_features/: 13918_AV.csv  13918_MV.csv  13918_PV.csv  13918_TV.csv  14241_AV.csv  14241_MV.csv  14241_PV.csv  14241_TV.csv  14998_AV.csv  14998_MV.csv  14998_PV.csv  14998_TV.csv  23625_AV.csv  23625_MV.csv  23625_PV.csv  23625_TV.csv  24160_AV.csv  24160_MV.csv  24160_PV.csv  24160_TV.csv  2530_AV.csv  2530_MV.csv  2530_PV.csv  2530_TV.csv  29045_AV.csv  29045_MV.csv  29045_PV.csv  29045_TV.csv  29378_AV.csv  29378_MV.csv  31737_AV.csv  31737_MV.csv  (+3131 more)
notebooks/: analyze_dataset.ipynb  eda.py  eda_signal_analysis.py  readme.md
scripts/: make_patient_splits.py
src/features/: build_dataset.py  extractor.py  frequency_features.py
(+3169 files in other folders)
